--- a/FuseDeskApi/FuseDeskApi.csproj
+++ b/FuseDeskApi/FuseDeskApi.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>    
   </PropertyGroup>
+
+  
+  
 
   <ItemGroup>
     <None Remove="Properties\PublishProfiles\CustomProfile.pubxml" />
@@ -22,5 +25,7 @@
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties bundleconfig_1json__JSONSchema="http://json.schemastore.org/cryproj_53" /></VisualStudio></ProjectExtensions>
 
 </Project>
